# Agricultural_chatbot

./: app.py  app2.py  app3.py  main.py  pyproject.toml  requirements.txt
